--- a/Week3NotebookComplete.ipynb
+++ b/Week3NotebookComplete.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 3 Coursera Capstone Assignment Part 1"
+    "# Week 3 Coursera Capstone Complete"
    ]
   },
   {
